terminei os testes do produto perecivel